videos: fix header button styling on mobile after 0a916bdee9b88605359f4a68440536393a63df83

--- a/src/Videos.css
+++ b/src/Videos.css
@@ -333,7 +333,7 @@
 		text-align: left;
 		justify-content: space-around;
 	}
-	.video-list-wrapper button {
+	.video-list-wrapper .header-button {
 		position: relative;
 		right: 0;
 	}
